added a few papers

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -1,85 +1,5 @@
 % Encoding: UTF-8
 
-@Article{Xiang2015,
-  author    = {Xiang, J. and Hu, T. and Hu, K. and Tang, Y.-N. and Gao, Y.-Y. and Chai, C.-H. and Liu, X.-J.},
-  title     = {Analysis of community-detection methods based on Potts spin model in complex networks},
-  journal   = {Canadian Journal of Physics / Revue canadienne de physique},
-  year      = {2015},
-  volume    = {93},
-  number    = {4},
-  pages     = {418-423},
-  abstract  = {Abstract: Detection of community structures in complex networks is
-	a common challenge in the study of complex networks. Recently, various
-	methods have been proposed to discover community structures at different
-	scales. Here, the multiscale methods based on Potts spin model for
-	community detection are described and compared in the analysis of
-	community structures of several networks. We give a critical analysis
-	of the multiscale methods, showing a kind of limitation that the
-	methods may suffer from when the community size difference is very
-	broad, the breakup of (large) communities will appear before the
-	merger of (small) communities disappears. In particular, we give
-	the explicit expressions for the critical points of the merger and
-	breakup of communities and derive the sufficient conditions (in the
-	form of upper limits) that indicate when the Potts model methods
-	suffer from the limitation. We apply the theoretical results to model
-	networks and show that the method using the configuration null model
-	(i.e., a random graph model as comparison that has the same degree
-	distribution as the network under study) may not recover the full
-	structure of the model network, whereas the method using the Erdös-Rényi
-	null model will do so. Résumé La détection de structures de communautés
-	des réseaux complexes est un défi fréquent dans l’étude de ces réseaux
-	complexes. Récemment, différentes méthodes ont été proposées pour
-	la structure de communautés des réseaux à différentes échelles. Nous
-	décrivons ici les méthodes multi-échelles basées sur le modèle de
-	spin de Potts pour détecter les communautés et les comparons dans
-	l’analyse des structures de communautés de plusieurs réseaux. Nous
-	offrons une analyse critique des méthodes multi-échelles, montrant
-	une sorte de limitation dont peuvent souffrir ces méthodes lorsque
-	la différence en grosseur des communautés devient grande – l’éclatement
-	des grandes communautés apparaitra avant que la réunion des petites
-	communautés disparaisse -. Plus précisément, nous donnons des expressions
-	explicites pour les points de réunion et d’éclatement des communautés
-	et nous dérivons les conditions suffisantes (sous la forme de limites
-	supérieures) qui indiquent quand les méthodes basées sur le modèle
-	de Potts souffrent de cette limitation. Nous appliquons ces résultats
-	théoriques pour modéliser des réseaux et montrons que la méthode
-	utilisant le modèle nul de configuration (i.e. un modèle à graphes
-	aléatoires comme comparaison qui a le même distribution de degrés
-	que le réseau étudié) peut ne pas pouvoir recouvrer la pleine structure
-	du réseau modèle, alors que la méthode utilisant le modèle nul de
-	Erdös-Rényi le peut. [Traduit par le Rédaction]},
-  doi       = {10.1139/cjp-2013-0652},
-  file      = {:Analysis of community-detection methods based on Potts spin model in complex networks.pdf:PDF},
-  groups    = {_Reviews / Surveys - Com Det},
-  owner     = {Vincent},
-  timestamp = {2015.02.20},
-}
-
-@InProceedings{Elson2010,
-  author    = {Elson, D. K and Dames, N. and McKeown, K. R.},
-  title     = {Extracting social networks from literary fiction},
-  booktitle = {48th annual meeting of the ACL},
-  year      = {2010},
-  pages     = {138-147},
-  abstract  = {We present a method for extracting social networks from literature,
-	namely, nineteenth-century British novels and serials. We derive
-	the networks from dialogue interactions, and thus our method depends
-	on the ability to determine when two characters are in conversation.
-	Our approach involves character name chunking, quoted speech attribution
-	and conversation detection given the set of quotes. We extract features
-	from the social networks and examine their correlation with one another,
-	as well as with metadata such as the novel's setting. Our results
-	provide evidence that the majority of novels in this time period
-	do not fit two characterizations provided by literacy scholars. Instead,
-	our results suggest an alternative explanation for differences in
-	social networks.},
-  file      = {:Extracting social networks from literary fiction.pdf:PDF},
-  groups    = {Others, Ignored},
-  owner     = {Vincent},
-  timestamp = {2015.07.06},
-  url       = {http://dl.acm.org/citation.cfm?id=1858696},
-}
-
 @Article{Abbe2014,
   author    = {Abbe, E. and Bandeira, A. S. and Bracher, A. and Singer, A.},
   title     = {Decoding Binary Node Labels from Censored Edge Measurements: Phase Transition and Efficient Recovery},
@@ -745,6 +665,21 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.03.13},
+}
+
+@Article{Altafini2013,
+  author    = {Altafini, C.},
+  title     = {Consensus Problems on Networks With Antagonistic Interactions},
+  journal   = {IEEE Transactions on Automatic Control},
+  year      = {2013},
+  volume    = {58},
+  number    = {4},
+  pages     = {935-946},
+  doi       = {10.1109/tac.2012.2224251},
+  file      = {:Consensus Problems on Networks With Antagonistic Interactions.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
 }
 
 @Article{Alvarez-Hamelin2008,
@@ -4410,6 +4345,20 @@
   timestamp = {2012.07.30},
 }
 
+@Article{ChengshengYuan2016,
+  author    = {Yuan, C. and Sun, X. and Lv, R.},
+  title     = {Fingerprint liveness detection based on multi-scale LPQ and PCA},
+  journal   = {China Communications},
+  year      = {2016},
+  volume    = {13},
+  number    = {7},
+  pages     = {60-65},
+  doi       = {10.1109/cc.2016.7559076},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
+}
+
 @Article{Chiang2007,
   author    = {Chiang, C. and Kahng, A. B. and Sinha, S. and Xu, X. and Zelikovsky, A. Z.},
   title     = {Fast and Efficient Bright-Field {AAPSM} Conflict Detection and Correction},
@@ -6261,6 +6210,19 @@
   url       = {http://dl.acm.org/citation.cfm?id=1611638.1611641},
 }
 
+@InProceedings{Elson2010,
+  author    = {Elson, D. K and Dames, N. and McKeown, K. R.},
+  title     = {Extracting social networks from literary fiction},
+  booktitle = {48th annual meeting of the ACL},
+  year      = {2010},
+  pages     = {138-147},
+  file      = {:Extracting social networks from literary fiction.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2015.07.06},
+  url       = {http://dl.acm.org/citation.cfm?id=1858696},
+}
+
 @Book{Elton1995,
   title     = {Modern Portfolio Theory and Investment Analysis},
   publisher = {Wiley},
@@ -7031,6 +6993,22 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   timestamp = {2010.06.03},
 }
 
+@Article{Fortunato2016,
+  author        = {Fortunato, S. and Hric, D.},
+  title         = {Community detection in networks: A user guide},
+  journal       = {Physics Reports},
+  year          = {2016},
+  volume        = {659},
+  pages         = {1-44},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1016/j.physrep.2016.09.002},
+  file          = {:Community detection in networks- A user guide.pdf:PDF},
+  groups        = {Graph Partitioning, Ignored},
+  owner         = {Vincent},
+  review        = {http://arxiv.org/abs/1608.00163},
+  timestamp     = {2016.08.02},
+}
+
 @InProceedings{Fouss2004,
   author    = {Fouss, F. and Pirotte, A. and Saerens, M.},
   title     = {The application of new concepts of dissimilarities between nodes of a graph to collaborative filtering},
@@ -7291,6 +7269,22 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.05},
+}
+
+@Article{Fu2013a,
+  author    = {Fu, X. and Liu, L. and Wang, C.},
+  title     = {Detection of community overlap according to belief propagation and conflict},
+  journal   = {Physica A},
+  year      = {2013},
+  volume    = {392},
+  number    = {4},
+  pages     = {941-952},
+  doi       = {10.1016/j.physa.2012.09.023},
+  file      = {:Detection of community overlap according to belief propagation and conflict.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  review    = {alt title: Overlapping community detection with belief propagation and conflict},
+  timestamp = {2013.01.22},
 }
 
 @InProceedings{Gael2007,
@@ -8762,6 +8756,20 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   url       = {https://books.google.fr/books/about/Discrimination_and_classification.html?id=YxrvAAAAMAAJ},
 }
 
+@Article{Handl2007,
+  author    = {Handl, J. and Knowles, J.},
+  title     = {An Evolutionary Approach to Multiobjective Clustering},
+  journal   = {IEEE Transactions on Evolutionary Computation},
+  year      = {2007},
+  volume    = {11},
+  number    = {1},
+  pages     = {56-76},
+  doi       = {10.1109/tevc.2006.877146},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
+}
+
 @InProceedings{Hanneke2009,
   author    = {Hanneke, S. and Xing, E. P.},
   title     = {Network completion and survey sampling},
@@ -9508,6 +9516,17 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   timestamp = {2012.07.29},
 }
 
+@Book{Holland1992,
+  title     = {Adaptation in natural and artificial systems: an introductory analysis with applications to biology, control, and artificial intelligence},
+  publisher = {MIT press},
+  year      = {1992},
+  author    = {Holland, J. H.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
+  url       = {http://dl.acm.org/citation.cfm?id=531075},
+}
+
 @Article{Holme2003a,
   author    = {Holme, P. and Liljeros, F. and Edling, C. R. and Kim, B. J.},
   title     = {Network bipartivity},
@@ -9783,6 +9802,19 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   owner     = {Vincent},
   timestamp = {2017.07.23},
   url       = {https://arxiv.org/abs/cond-mat/0408125},
+}
+
+@Article{Hu2008,
+  author    = {Hu, G. and Heitmann, J. A. and Rojas, O. J.},
+  title     = {Feedstock pretreatment strategies for producing ethanol from wood, bark, and forest residues},
+  journal   = {BioResources},
+  year      = {2008},
+  volume    = {3},
+  number    = {1},
+  pages     = {270-294},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
+  url       = {http://ojs.cnr.ncsu.edu/index.php/BioRes/article/view/BioRes_03_1_0270_Hu_HR_Feedstock_Pretreatment},
 }
 
 @InProceedings{Hu2009,
@@ -10267,7 +10299,7 @@ arXiv url: https://arxiv.org/abs/1312.4345},
 
 @Article{Jaccard1912,
   author    = {Jaccard, P.},
-  title     = {The distribution of the floar in the Alpine zone},
+  title     = {The distribution of the flora in the Alpine zone},
   journal   = {New Phytologist},
   year      = {1912},
   volume    = {11},
@@ -13470,6 +13502,17 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.18},
 }
 
+@InProceedings{Liu2010b,
+  author    = {Liu, J. and Sun, X. and Camacho-Aguilera, R. and Cai, Y. and Kimerling, L. C. and Michel, J.},
+  title     = {Monolithic Ge-on-Si lasers for integrated photonics},
+  booktitle = {7th IEEE International Conference on Group IV Photonics},
+  year      = {2010},
+  doi       = {10.1109/group4.2010.5643446},
+  groups    = {Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
+}
+
 @Article{Liu2010d,
   author    = {Liu, X. and Murata, T.},
   title     = {Advanced modularity-specialized label propagation algorithm for detecting communities in networks},
@@ -13732,6 +13775,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2013.02.04},
 }
 
+@Article{Luccio1969,
+  author    = {Luccio, F. and Sami, M.},
+  title     = {On the decomposition of networks into minimally interconnected networks},
+  journal   = {IEEE Transactions on Circuits and Systems},
+  year      = {1969},
+  volume    = {16},
+  pages     = {184-188},
+  doi       = {10.1109/TCT.1969.1082924},
+  file      = {:On the Decomposition of Networks in Minimally Interconnected Subnetworks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.12.24},
+}
+
 @Article{Luce1949,
   author    = {Luce, R. D. and Perry, A. D.},
   title     = {A method of matrix analysis of group structure},
@@ -13893,6 +13950,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp     = {2017.05.08},
 }
 
+@Article{MA2015,
+  author    = {Ma, T. and Zhou, J. and Tang, M. and Tian, Y. and Al-Dhelaan, A. and Al-Rodhaan, M. and Lee, S.},
+  title     = {Social Network and Tag Sources Based Augmenting Collaborative Recommender System},
+  journal   = {IEICE Transactions on Information and Systems},
+  year      = {2015},
+  volume    = {E98.D},
+  number    = {4},
+  pages     = {902-910},
+  doi       = {10.1587/transinf.2014edp7283},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
+}
+
 @Article{Ma2015a,
   author    = {Ma, L. and Gong, M. and Du, H. and Shen, B. and Jiao, L.},
   title     = {A memetic algorithm for computing and transforming structural balance in signed networks},
@@ -13917,7 +13988,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1016/j.ins.2016.10.035},
   file          = {:A decomposition-based multi-objective optimization for simultaneous balance computation and transformation in signed networks.pdf:PDF},
-  groups        = {Graph Partitioning, _To do},
+  groups        = {Graph Partitioning, _To do, Found},
   owner         = {Vincent},
   timestamp     = {2017.05.03},
 }
@@ -13929,6 +14000,7 @@ old title: The map equation and the resolution limit in community detection},
   year      = {2017},
   doi       = {10.1016/j.elerap.2017.06.005},
   file      = {:An Explicit Trust and Distrust Clustering based Collaborative Filtering Recommendation Approach.pdf:PDF},
+  groups    = {Graph Partitioning, Not Found Yet},
   owner     = {Vincent},
   timestamp = {2017.07.04},
 }
@@ -15330,7 +15402,7 @@ old title: The map equation and the resolution limit in community detection},
   pages     = {67-80},
   doi       = {10.1007/978-3-319-54241-6_6},
   file      = {:Community Detection in Signed Networks Based on Extended Signed Modularity.pdf:PDF},
-  groups    = {Done Manually},
+  groups    = {Graph Partitioning, Found},
   owner     = {Vincent},
   timestamp = {2017.03.04},
 }
@@ -18530,6 +18602,21 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.10},
 }
 
+@Article{Shang2012a,
+  author    = {Shang, R. and Bai, J. and Jiao, L. and Jin, C.},
+  title     = {Community detection based on modularity and improved genetic algorithm},
+  journal   = {Physica A},
+  year      = {2013},
+  volume    = {392},
+  number    = {5},
+  pages     = {1215-1231},
+  doi       = {10.1016/j.physa.2012.11.003},
+  file      = {:Community detection based on modularity and improved genetic algorithm.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.11.26},
+}
+
 @Article{Shang2014,
   author    = {Shang, R. and Wang, Y. and Wang, J. and Jiao, L. and Wang, S. and Qi, L.},
   title     = {A multi-population cooperative coevolutionary algorithm for multi-objective capacitated arc routing problem},
@@ -18557,6 +18644,64 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2014.10.21},
 }
 
+@Article{Shang2015,
+  author    = {Shang, R. and Luo, S. and Li, Y. and Jiao, L. and Stolkin, R.},
+  title     = {Large-scale community detection based on node membership grade and sub-communities integration},
+  journal   = {Physica A},
+  year      = {2015},
+  volume    = {428},
+  pages     = {279-294},
+  doi       = {10.1016/j.physa.2015.02.004},
+  file      = {:Large-scale community detection based on node membership grade and sub-communities integration.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2015.02.20},
+}
+
+@Article{Shang2016,
+  author    = {Shang, R. and Luo, S. and Zhang, W. and Stolkin, R. and Jiao, L.},
+  title     = {A multiobjective evolutionary algorithm to find community structures based on affinity propagation},
+  journal   = {Physica A},
+  year      = {2016},
+  volume    = {453},
+  pages     = {203-227},
+  doi       = {10.1016/j.physa.2016.02.020},
+  file      = {:A multiobjective evolutionary algorithm to find community structures based on affinity propagation.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2016.03.08},
+}
+
+@Article{Shang2016b,
+  author        = {Shang, R. and Zhang, W. and Jiao, L. and Stolkin, R. and Xue, Y.},
+  title         = {A community integration strategy based on an improved modularity density increment for large-scale networks},
+  journal       = {Physica A},
+  year          = {2016},
+  volume        = {469},
+  pages         = {471-485},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1016/j.physa.2016.11.066},
+  file          = {:A community integration strategy based on an improved modularity density increment for large-scale networks.pdf:PDF},
+  groups        = {Graph Partitioning, Ignored},
+  owner         = {Vincent},
+  timestamp     = {2016.11.27},
+}
+
+@Article{Shang2016c,
+  author    = {Shang, R. and Zhang, W. and Jiao, L.},
+  title     = {Circularly Searching Core Nodes Based Label Propagation Algorithm for Community Detection},
+  journal   = {International Journal of Pattern Recognition and Artificial Intelligence},
+  year      = {2016},
+  volume    = {30},
+  number    = {08},
+  pages     = {1659024},
+  doi       = {10.1142/s0218001416590242},
+  file      = {:Circularly Searching Core Nodes Based Label Propagation Algorithm for Community Detection.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
+}
+
 @Article{Shang2017a,
   author        = {Shang, R. and Liu, H. and Jiao, L.},
   title         = {Multi-objective clustering technique based on K-nodes update policy and similarity matrix for mining communities in social networks},
@@ -18566,7 +18711,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1016/j.physa.2017.05.026},
   file          = {:Multi-objective clustering technique based on K-nodes update policy and similarity matrix for mining communities in social networks.pdf:PDF},
-  groups        = {Graph Partitioning, _To do},
+  groups        = {Graph Partitioning, _To do, Found},
   owner         = {Vincent},
   timestamp     = {2017.05.30},
 }
@@ -19189,6 +19334,19 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.07.27},
   url       = {http://www.anthology.aclweb.org/D/D13/D13-1170.pdf},
+}
+
+@Article{Soerensen1948,
+  author    = {Sørensen, T.},
+  title     = {A method of establishing group of equal amplitude in plant sociobiology based on similarity of species content and its application to analyses of the vegetation on Danish commons},
+  journal   = {Biologiske skrifter},
+  year      = {1948},
+  volume    = {5},
+  pages     = {1-34},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
+  url       = {http://www.citeulike.org/group/2384/article/7654646},
 }
 
 @Article{Sogin2006,
@@ -20624,6 +20782,19 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.08.12},
 }
 
+@Article{Valcher2014,
+  author    = {Valcher, M. E. and Misra, P.},
+  title     = {On the consensus and bipartite consensus in high-order multi-agent dynamical systems with antagonistic interactions},
+  journal   = {Systems \& Control Letters},
+  year      = {2014},
+  volume    = {66},
+  pages     = {94-103},
+  doi       = {10.1016/j.sysconle.2014.01.006},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
+}
+
 @Article{Valente2012,
   author    = {Valente, T. W.},
   title     = {Network Interventions},
@@ -21248,6 +21419,21 @@ old title: The map equation and the resolution limit in community detection},
   url       = {http://arxiv.org/abs/0907.3509},
 }
 
+@Article{Wei1991,
+  author    = {Wei, Y. C. and Cheng, C. K.},
+  title     = {Ratio cut partitioning for hierarchical designs},
+  journal   = {IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+  year      = {1991},
+  volume    = {10},
+  number    = {7},
+  pages     = {911-921},
+  doi       = {10.1109/43.87601},
+  file      = {:Ratio cut partitioning for hierarchical designs.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2016.03.20},
+}
+
 @Article{Weidmann2010,
   author    = {Weidmann, N. B. and Kuse, D. and Gleditsch, K. S.},
   title     = {The Geography of the International System: The CShapes Dataset},
@@ -21849,6 +22035,21 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2014.11.15},
 }
 
+@Article{Xiang2015,
+  author    = {Xiang, J. and Hu, T. and Hu, K. and Tang, Y.-N. and Gao, Y.-Y. and Chai, C.-H. and Liu, X.-J.},
+  title     = {Analysis of community-detection methods based on Potts spin model in complex networks},
+  journal   = {Canadian Journal of Physics / Revue canadienne de physique},
+  year      = {2015},
+  volume    = {93},
+  number    = {4},
+  pages     = {418-423},
+  doi       = {10.1139/cjp-2013-0652},
+  file      = {:Analysis of community-detection methods based on Potts spin model in complex networks.pdf:PDF},
+  groups    = {_Reviews / Surveys - Com Det},
+  owner     = {Vincent},
+  timestamp = {2015.02.20},
+}
+
 @Article{Xiang2015a,
   author    = {Xiang, J. and Hu, T. and Zhang, Y. and Hu, K. and Li, J.-M. and Xu, X.-K. and Liu, C.-C. and Chen, S.},
   title     = {Local modularity for community detection in complex networks},
@@ -21907,6 +22108,21 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.03},
+}
+
+@Article{Xie2009,
+  author    = {Xie, F. and Ji, M. and Zhang, Y. and Huang, D.},
+  title     = {The detection of community structure in network via an improved spectral method},
+  journal   = {Physica A},
+  year      = {2009},
+  volume    = {388},
+  number    = {15-16},
+  pages     = {3268-3272},
+  doi       = {10.1016/j.physa.2009.04.036},
+  file      = {:The detection of community structure in network via an improved spectral method.pdf:PDF},
+  groups    = {Graph Partitioning},
+  owner     = {Vincent},
+  timestamp = {2012.08.31},
 }
 
 @Article{Xie2013b,
@@ -22212,7 +22428,7 @@ old title: The map equation and the resolution limit in community detection},
 }
 
 @Article{Yang2017c,
-  author        = {Yang, B. and Liu, X. and Li, Y. and Zhao, X/},
+  author        = {Yang, B. and Liu, X. and Li, Y. and Zhao, X.},
   title         = {Stochastic Blockmodeling and Variational Bayes Learning for Signed Network Analysis},
   journal       = {IEEE Transactions on Knowledge and Data Engineering},
   year          = {2017},
@@ -22239,6 +22455,20 @@ old title: The map equation and the resolution limit in community detection},
   groups        = {Graph Partitioning},
   owner         = {Vincent},
   timestamp     = {2017.07.11},
+}
+
+@Article{YanhuaZhang2016,
+  author    = {Zhang, Y. and Sun, X. and Wang, B.},
+  title     = {Efficient algorithm for k-barrier coverage based on integer linear programming},
+  journal   = {China Communications},
+  year      = {2016},
+  volume    = {13},
+  number    = {7},
+  pages     = {16-23},
+  doi       = {10.1109/cc.2016.7559071},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
 }
 
 @InProceedings{Yannakakis1983,
@@ -22663,7 +22893,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1109/TCSII.2017.2713526},
   file          = {:Cluster Consensus in Networks of Agents With Weighted Cooperative-Competitive Interactions.pdf:PDF},
-  groups        = {Ignored},
+  groups        = {Ignored, Others},
   owner         = {Vincent},
   timestamp     = {2017.06.18},
 }
@@ -22772,6 +23002,21 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.02},
 }
 
+@Article{Zhang2010,
+  author    = {Zhang, D. and Xie, F. and Zhang, Y. and Dong, F. and Hirota, K.},
+  title     = {Fuzzy analysis of community detection in complex networks},
+  journal   = {Physica A},
+  year      = {2010},
+  volume    = {389},
+  number    = {22},
+  pages     = {5319-5327},
+  doi       = {10.1016/j.physa.2010.07.016},
+  file      = {:Fuzzy analysis of community detection in complex networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.07.27},
+}
+
 @InProceedings{Zhang2010g,
   author        = {Zhang, K. and Lo, D. and Lim, E.-P.},
   title         = {Mining antagonistic communities from social networks},
@@ -22876,6 +23121,19 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.06.22},
 }
 
+@Article{Zhang2016,
+  author    = {Zhang, J. and Wu, Y. and Guo, Y. and Wang, B. and Wang, H. and Liu, H.},
+  title     = {A hybrid harmony search algorithm with differential evolution for day-ahead scheduling problem of a microgrid with consideration of power flow constraints},
+  journal   = {Applied Energy},
+  year      = {2016},
+  volume    = {183},
+  pages     = {791-804},
+  doi       = {10.1016/j.apenergy.2016.09.035},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
+}
+
 @Article{Zhang2016a,
   author    = {Zhang, H. and Wang, C.-D. and Lai, J.-H. and Yu, P. S.},
   title     = {Modularity in Complex Multilayer Networks with Multiple Aspects: A Static Perspective},
@@ -22889,6 +23147,19 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2016.05.28},
   url       = {http://arxiv.org/abs/1605.06190},
+}
+
+@Article{Zhang2016b,
+  author    = {Zhang, J. and Tang, Q. and Li, P. and Deng, D. and Chen, Y.},
+  title     = {A modified MOEA/D approach to the solution of multi-objective optimal power flow problem},
+  journal   = {Applied Soft Computing},
+  year      = {2016},
+  volume    = {47},
+  pages     = {494-514},
+  doi       = {10.1016/j.asoc.2016.06.022},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
 }
 
 @PhdThesis{Zhao2005,
@@ -22945,6 +23216,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Just balance, _To do},
   owner     = {Vincent},
   timestamp = {2016.10.31},
+}
+
+@Article{ZhiguoQu2016,
+  author    = {Qu, Z. and Keeney, J. and Robitzsch, S. and Zaman, F. and Wang, X.},
+  title     = {Multilevel pattern mining architecture for automatic network monitoring in heterogeneous wireless communication networks},
+  journal   = {China Communications},
+  year      = {2016},
+  volume    = {13},
+  number    = {7},
+  pages     = {108-116},
+  doi       = {10.1109/cc.2016.7559082},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.25},
 }
 
 @Article{Zhong2004,
@@ -23194,10 +23479,11 @@ old title: The map equation and the resolution limit in community detection},
 1 ExplicitGroup:Just balance\;0\;;
 1 ExplicitGroup:_Biblionet\;2\;;
 2 ExplicitGroup:_To do\;0\;;
-2 ExplicitGroup:Found\;0\;;
-2 ExplicitGroup:Done Manually\;0\;;
-2 ExplicitGroup:Not Found\;0\;;
 2 ExplicitGroup:Book\;0\;;
+2 ExplicitGroup:Done Manually\;0\;;
+2 ExplicitGroup:Found\;0\;;
+2 ExplicitGroup:Not Found\;0\;;
+2 ExplicitGroup:Not Found Yet\;0\;;
 2 ExplicitGroup:Ignored\;0\;;
 }
 
